Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_Timesheet_VMS_Client_Column__mdt/Portal_V2_Timesheet_VMS_Client_Column__mdt.object-meta.xml
<CustomObject>
    <label>Portal V2 -Timesheet VMS Client Column</label>
    <pluralLabel>Portal V2 -Timesheet VMS Client Column</pluralLabel>
</CustomObject>