Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_Timesheet_VMS_Client_Column__mdt/fields/Child_Column_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Column_Name__c</fullName>
    <label>Child Column Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>