Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_Timesheet_VMS_Client_Column__mdt/fields/Include_in_temp_feedback_modal__c.field-meta.xml
<CustomField>
    <fullName>Include_in_temp_feedback_modal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in temp feedback modal</label>
    <type>Checkbox</type>
</CustomField>